--- a/styles.css
+++ b/styles.css
@@ -13,44 +13,26 @@ body {
 }
 
 h1 {
-  animation: 3s linear 1s infinite alternate slidein;
+  animation: 3s linear 1s infinite alternate slidein, blinking .2s infinite;
   color: #6f0000;
   text-shadow: 2px 2px 5px #fc8210;
+}
+@keyframes blinking{
+  0%{     color: #000;    }
+  49%{    color: #000; }
+  60%{    color: transparent; }
+  99%{    color:transparent;  }
+  100%{   color: #000;    }
+}
 
-  .blinking {
-    animation: blinking 1.2s infinite;
-  }
+h3 {
+  color: #f17808
+}
 
-  @keyframes blinkingText {
-    0% {
-      color: #000;
-    }
-
-    49% {
-      color: #000;
-    }
-
-    60% {
-      color: transparent;
-    }
-
-    99% {
-      color: transparent;
-    }
-
-    100% {
-      color: #000;
-    }
-  }
-
-  h3 {
-    color: #f17808
-  }
-
-  hr {
-    border-style: none;
-    border-top-style: dotted;
-    border-color: grey;
-    border-width: 5px;
-    width: 5%;
-  }
+hr {
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 5px;
+  width: 5%;
+}
